--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         </div>
     </div>
   </div>
-
   <header style="--element-height: 100vh;">
     <div class="headerCenter">
       <div class="info">
@@ -39,7 +38,7 @@
           <h1>CallClass - инструмент, созданный для удобства и безопасности</h1>
           <p class="edu">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit corrupti aspernatur illum quam dolor placeat quod ipsam obcaecati dolorum expedita minima asperiores nulla, velit sit quasi. Voluptates ipsum accusamus temporibus.</p>
           <button>
-            <div>
+            <div class="btndiv">
               <p>подробнее</p>
             </div>
           </button>
@@ -50,9 +49,23 @@
       </div>
     </div>
   </header>
+
+
   <main>
-    <div class="mainDiv1"></div>
+    <div class="mainDiv1" style="--mainDiv1-height: 50vh;">
+      <div class="mainDiv11">
+        <div class="line1text">
+          <div class="l1tp1-p">
+            <p class="l1tp1">Что такое<br> CallClass и для чего он нужен?</p>
+            <p class="l1tp2"><b>Все просто</b></p>
+          </div>
+        </div>
+      </div>
+      <div class="mainDiv12"></div>
+    </div>
   </main>
+
+
   <script src="script.js"></script>
 </body>
 </html>
